@@ -27,6 +27,6 @@ dist_pickles_DATA = ctf.pk ctf-dump.pk leb128.pk \
                     pe-m32r.pk pe-mips.pk pe-ppc.pk pe-sh3.pk pe-riscv.pk pe-debug.pk \
 		    uuid.pk redoxfs.pk pcap.pk ieee754.pk pdap.pk \
                     iscan.pk iscan-str.pk base64.pk gpt-partition-attrs.pk \
-		    gpt-partition-types.pk gpt.pk guid.pk linux.pk
+		    gpt-partition-types.pk gpt.pk guid.pk linux.pk srec.pk
 
 EXTRA_DIST = README.elf
